# python-disposable-email-domains

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: cron.yml  release.yml  test.yml
disposable_email_domains/: __init__.py
source_data/: disposable_email_blocklist.conf
tests/: test_allowlist.py  test_blacklist.py  test_blocklist.py  test_whitelist.py
